fix header z-index
(cherry picked from commit 8ffeac5)

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -39,6 +39,7 @@ $width-page-min: 768px; // tablets: yes, mobiles: no
       width: 100%;
       min-width: $width-page-min;
       height: 105px;
+      z-index: 10;
     }
 
     #mainSection {
